Changelog
=========

4.0-dev - (unreleased)
----------------------
 * Change: Migrated promolink_view from custom [szabozo0 #4161]
 * Bug fix: Added on-error handler to related_multimedia portlet, it 
   triggers errors in portal_relations view [tiberich #4690]
 * Change: Migrated portlet_center_map from custom [szabozo0 #4161]
 * Change: Migrated flashfileStyle, rssAllowed from custom [szabozo0 #4161 #4685]
 * Bug fix: make document_mediatop_view use standard macros for viewing documents [tiberich #4681]
 * Change: Migrated cft_listing from custom [szabozo0 #4161 #4685]
 * Bug fix: Enabled resize.js [szabozo0 #4667]
 * Bug fix: added AssessmentPart to list of content types that are displayed as Other related items [tiberich #4629]
 * Bug fix: use dcterms namespace instead of dc in @@rdf view [tiberich #4250] (backport v2.30)

 * Change: allow hiding the subtyper menu based on context portal type; renamed Topic subtyper as video container 
   [tiberich #4582]

 * Optimization: changed the way the related information is computed to optimize load times [tiberich #4510]

 * Bugfix: Fixed maps right widget (countries) [szabozo0 #4510]

 * Change: Fixed the video template to fill slot content-core. Made all the related
   templates available as viewlets and registered below content body.

 * Bugfix: Fixed IE JS errors, fixed code that uses jQuery to avoid conflicts
   with other JS frameworks [szabozo0 #4542]

 * Change: Design fix, moved the "related multimedia content" from the floating slot in document
   to the bottom, due to smaller content column width. (will be converted to viewlets)
   [demarant #4537]

 * Change: Replace plone 4 default location field with eea.geotags location field [szabozo #4510]

 * Bugfix: Fixed Images on PressRelease [szabozo0 #4510]

 * Change: Removed portlet themes from highlights view since we now use it as viewlet below title [demarant #4206, #4458].
  