@@ -3,6 +3,8 @@ Changelog
 
 4.0-dev - (unreleased)
 ----------------------
+ * Change: Made eea geotag required for IExternalHighlight via schemaextender 
+   [demarant #4694]
  * Change: Migrated promolink_view from custom [szabozo0 #4161]
  * Bug fix: Added on-error handler to related_multimedia portlet, it 
    triggers errors in portal_relations view [tiberich #4690]
